src/objects/AD_Application_Request__c.object
<CustomObject>
    <fields>
        <fullName>AD_Application_Level__c</fullName>
        <label>AD Application Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AD_Application_Name__c</fullName>
        <label>AD Application Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AD_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AD Application</label>
        <referenceTo>AD_Application__c</referenceTo>
        <relationshipLabel>AD Application Requests</relationshipLabel>
        <relationshipName>AD_Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AD_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AD User</label>
        <referenceTo>AD_User__c</referenceTo>
        <relationshipLabel>AD Application Requests</relationshipLabel>
        <relationshipName>AD_Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>AD_User__r.AD_User_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federation_Id__c</fullName>
        <formula>AD_User__r.AD_Federation_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federation Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>AD_User__r.AD_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>AD_User__r.AD_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SECID__c</fullName>
        <formula>AD_User__r.SECID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SECID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <formula>AD_User__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <label>AD Application Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AD_Application_Name__c</columns>
        <columns>AD_Application_Level__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>SECID__c</columns>
        <columns>Username__c</columns>
        <columns>Federation_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADR-{000000}</displayFormat>
        <label>AD Application Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AD Application Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>